CHERRY PICK 1.6.3 with janko:merge with latest 1.6.1
version 1.6.1.1 (5/11/13)
- Merged with latest Fullcalendar version 1.6.1
- Fixed issue #29 Resize does not work when event is 1 day and weekends
off
- Fixed issue #24 single all-day events do not display in resource day
view

Conflicts:
	.gitignore
	build/watch
	changelog.txt
	demos/cupertino/images/animated-overlay.gif
	demos/cupertino/images/ui-bg_diagonals-thick_90_eeeeee_40x40.png
	demos/cupertino/images/ui-bg_flat_15_cd0a0a_40x100.png
	demos/cupertino/images/ui-bg_glass_100_e4f1fb_1x400.png
	demos/cupertino/images/ui-bg_glass_50_3baae3_1x400.png
	demos/cupertino/images/ui-bg_glass_80_d7ebf9_1x400.png
	demos/cupertino/images/ui-bg_highlight-hard_100_f2f5f7_1x100.png
	demos/cupertino/images/ui-bg_highlight-hard_70_000000_1x100.png
	demos/cupertino/images/ui-bg_highlight-soft_100_deedf7_1x100.png
	demos/cupertino/images/ui-bg_highlight-soft_25_ffef8f_1x100.png
	demos/cupertino/theme.css
	demos/resourceView.html
	fullcalendar.jquery.json
	license.txt
	lumbar.json
	src/agenda/AgendaEventRenderer.js
	src/agenda/AgendaView.js
	src/basic/BasicDayView.js
	src/basic/BasicEventRenderer.js
	src/basic/BasicView.js
	src/basic/BasicWeekView.js
	src/basic/MonthView.js
	src/common/DayEventRenderer.js
	src/common/SelectionManager.js
	src/common/View.js
	src/date_util.js
	src/defaults.js
	src/resource/ResourceEventRenderer.js
	src/resource/ResourceView.js
	src/util.js
	tests/lib/themeswitcher/README.md
	tests/lib/themeswitcher/images/buttonbg.png
	tests/lib/themeswitcher/images/icon_color_arrow.gif
	tests/lib/themeswitcher/images/menuhoverbg.png
	tests/lib/themeswitcher/images/theme_90_black_matte.png
	tests/lib/themeswitcher/images/theme_90_black_tie.png
	tests/lib/themeswitcher/images/theme_90_blitzer.png
	tests/lib/themeswitcher/images/theme_90_cupertino.png
	tests/lib/themeswitcher/images/theme_90_dark_hive.png
	tests/lib/themeswitcher/images/theme_90_dot_luv.png
	tests/lib/themeswitcher/images/theme_90_eggplant.png
	tests

--- a/demos/agenda-views.html
+++ b/demos/agenda-views.html
@@ -22,6 +22,7 @@
 				right: 'month,agendaWeek,agendaDay'
 			},
 			editable: true,
+			snapMinutes:15,
 			events: [
 				{
 					title: 'All Day Event',
