--- a/demos/agenda-views.html
+++ b/demos/agenda-views.html
@@ -21,6 +21,9 @@
 				center: 'title',
 				right: 'month,agendaWeek,agendaDay,basicView,basicWeek'
 			},
+			eventResize: function (evento, dayDelta,minuteDelta,event) {
+				console.log(dayDelta + ' | ' + minuteDelta);
+			},
 			editable: true,
 			events: [
 				{
